fix: Wrong color declaration for quotation marks

--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -415,7 +415,7 @@ q,
 blockquote {
   font-style: normal;
   font-weight: 100;
-  color: my.palette('quotes');
+  color: my.palette('text', 'quotes');
 }
 
 cite {
